[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/progress/circle_load.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/Intro/Intro.gd" type="Script" id=2]
[ext_resource path="res://assets/font/SFDigitalReadout-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/progress/circle_transparent.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "out"
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Circle:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Circle:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/Circle:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/Circle:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background/Circle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = -128.5
margin_right = 128.5
margin_bottom = 128.5
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.2, 0.364706, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="RichTextLabel" parent="Background/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -20.5
margin_right = 66.5
margin_bottom = 20.5
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.2, 0.364706, 0.713726, 1 )
text = "Loading"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle" type="TextureRect" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerProgress" type="Timer" parent="."]
wait_time = 0.01

[node name="TimerLoadingLabel" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/out = SubResource( 2 )
[connection signal="timeout" from="TimerProgress" to="." method="_on_TimerProgress_timeout"]
[connection signal="timeout" from="TimerLoadingLabel" to="." method="_on_TimerLoadingLabel_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
